test/stg/error/con2.stg
-- non-existant constructor (not in conmap)
foo = CON(J 1);
